[package]
name = "sync-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-walkdir = "1"
async-recursion = "1.0.0"
aws-config = "1"
aws-sdk-s3 = "1"
anyhow = "1.0"
thiserror = "1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
aws-smithy-runtime = "1.0.1"
aws-smithy-runtime-api = { version = "1.0.1", features = ["client"] }
aws-smithy-types = { version = "1.0.1", features = ["http-body-0-4-x"] }