[package]
name = "sync-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
async-walkdir = "1"
async-recursion = "1.0.0"
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-runtime = "1.0.1"
aws-smithy-runtime-api = { version = "1.0.1", features = ["client"] }
aws-smithy-types = { version = "1.0.1", features = ["http-body-0-4-x"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
color-eyre = "0.6"
log = "0.4"
env_logger = "0.11"
path-slash = "0.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
thiserror = "2"

[dev-dependencies]
rstest = "0.24"
